--- a/views/bbn.ejs
+++ b/views/bbn.ejs
@@ -31,7 +31,7 @@
         </header>
         <section class="largeImg">
             <img style="height: 350px; Width:414px;object-fit: cover;" class="changeImg"
-                src="/assest/OLIVE/bbnfull.png" />
+                src="/assest/OLIVE/bbnFull.png" />
             <!-- <img src="/assest/OLIVE/guy.png" /> -->
             <!-- <img class="carousel" src="/assest/OLIVE/Group 2.png" /> -->
         </section>
