--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -166,7 +166,10 @@
     <script>
         const swiper = new Swiper('.swiper', {
             // Optional parameters
-
+            autoplay: {
+                delay: 2500,
+                disableOnInteraction: false,
+            },
             loop: true,
 
             // If we need pagination
