--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -162,6 +162,7 @@ header{
     
 }
 
+
 .content{
     background: #fff;
     text-align: center;
@@ -241,15 +242,46 @@ form option{
     height: 20%;
 }
 .flex-form{
-    width: 414px;
+  
     display: flex;
-    gap: 5px;
+    gap: 10px;
+   
     align-items: center;
     width: inherit;
     padding: 5px;
+    text-align: center;
 }
-.flex-form input {
-    border: none;
+.flex-form #code {
+    border-bottom: 1px solid black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 50px;
+    font-size: 20px;
+    outline: none;
+    background: none;
+}
+#phoneNumber{
+    background: none;
+    outline: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid black;
+    font-size: 20px;
+
+}
+
+.flex-form select{
+    -webkit-appearance: none;
+    background: none;
+    outline: none;
+    border-radius: 50%;
+   
+    border-color: transparent;
+}
+.unicode{
+   
 }
 
 
