--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,10 @@
 <script>
     const swiper = new Swiper('.swiper', {
         // Optional parameters
-
+        autoplay: {
+            delay: 2500,
+            disableOnInteraction: false,
+        },
         loop: true,
 
         // If we need pagination
