--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -127,7 +127,7 @@
                     <img class="socialicons" src="/assest/OLIVE/flat-color-icons_google.png" />
                 </div>
                 <div class="mail">
-                    <img src="/assest/OLIVE/Ellipse 2.png" />
+                    <img src="/assest/OLIVE/Ellipse.png" />
                     <img class="socialicons" src="/assest/OLIVE/clarity_email-outline-badged.png" />
                 </div>
             </footer>
