--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -83,9 +83,9 @@
             <div class="join">
 
                 <div class="phoneInput">
-                    <h4 class="form content_header">JOIN FREE OR SIGN IN</h4>
+                    <h4 class="form content_header">JOIN FREE OR SIGN IN
+                    </h4>
                     <hr>
-                    <img src="/assest/OLIVE/line 2.png" />
                     <form id="form" class="numberform">
                         <div class="flex-form">
                             <select>
@@ -94,7 +94,7 @@
                             <input type="text" name="code" id="code" readonly value="+234">
                             <input type="number" name="phone" id="phoneNumber" autocomplete="off">
                         </div>
-                        <img src="/assest/OLIVE/line 2.png" />
+                        <hr>
                         <button class="btn">SIGN IN</button>
                     </form>
                 </div>
