--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -83,8 +83,7 @@
             <div class="join">
 
                 <div class="phoneInput">
-                    <h4 class="form content_header">JOIN FREE OR SIGN IN
-                    </h4>
+                    <h4 class="form content_header">JOIN FREE OR SIGN IN</h4>
                     <hr>
                     <form id="form" class="numberform">
                         <div class="flex-form">
