--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -83,14 +83,15 @@
             <div class="join">
 
                 <div class="phoneInput">
-                    <h4 class="form content_header">JOIN FREE OR SIGN IN</h4>
+                    <h4 class="form content_header">JOIN FREE OR SIGN IN
+                    </h4>
                     <hr>
                     <form id="form" class="numberform">
                         <div class="flex-form">
                             <select>
                                 <option class="ng"></option>
                             </select>
-                            <input type="text" name="code" id="code" readonly value="+234">
+                            <!-- <input type="text" name="code" id="code" readonly value="+234"> -->
                             <input type="number" name="phone" id="phoneNumber" autocomplete="off">
                         </div>
                         <hr>
