--- a/views/bbn.ejs
+++ b/views/bbn.ejs
@@ -45,14 +45,21 @@
                 <form class="record">
                     <p>Choose a method below to record</p>
                     <div class="tools">
-                        <div>
-                            <img src="/assest/OLIVE/recordgold.png" alt="" srcset="">
-                            <h6>Record a video</h6>
-                        </div>
-                        <div>
-                            <img src="/assest/OLIVE/uploadGold.png" alt="" srcset="">
-                            <h6>Upload your video</h6>
-                        </div>
+                        <form>
+                            <div>
+
+                                <img src="/assest/OLIVE/recordgold.png" alt="" srcset="">
+                                <h6>Record a video</h6>
+                            </div>
+                            <div>
+                                <input type="file" name="" id="upload" hidden>
+                                <label for="upload">
+                                    <img src="/assest/OLIVE/uploadGold.png" alt="" srcset="">
+
+                                    <h6>Upload your video</h6>
+                                </label>
+                            </div>
+                        </form>
                     </div>
                     <div class="updateprofile">
                         <h6 class="content_header">Update Your Profile</h6>
