--- a/views/bbn.ejs
+++ b/views/bbn.ejs
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <script src='//cameratag.com/api/v14/js/cameratag.min.js' type='text/javascript'></script>
+    <link rel='stylesheet' href='//cameratag.com/static/14/cameratag.css'>
+    </link>
 </head>
 
 <body>
@@ -43,22 +46,25 @@
                     television series.
                 </p>
                 <form class="record">
-                    <p>Choose a method below to record</p>
+                    <!-- <p>Choose a method below to record</p> -->
                     <div class="tools">
                         <form>
-                            <div>
+                            <camera data-app-id='a-fdffa8d0-1b70-013a-3a92-0aac5b511429' id='myCamera'
+                                data-width='414px'></camera>
+                            <!-- <div>
 
                                 <img src="/assest/OLIVE/recordgold.png" alt="" srcset="">
                                 <h6>Record a video</h6>
                             </div>
                             <div>
-                                <input type="file" name="" id="upload" hidden>
-                                <label for="upload">
+                                <room data-app-id='a-fdffa8d0-1b70-013a-3a92-0aac5b511429' id='myRoomTag1'
+                                    data-room='chat_room_468be5e1'></room>
+                                <label for="myRoomTag1">
                                     <img src="/assest/OLIVE/uploadGold.png" alt="" srcset="">
 
                                     <h6>Upload your video</h6>
                                 </label>
-                            </div>
+                            </div> -->
                         </form>
                     </div>
                     <div class="updateprofile">
