--- a/views/bbn.ejs
+++ b/views/bbn.ejs
@@ -47,7 +47,7 @@
                     <p>Choose a method below to record</p>
                     <div class="tools">
                         <form>
-                            <a href="https://streamyard.com/8xt48tpqwm" target="_blank">
+                            <a href="https://streamyard.com/svff8dbpde" target="_blank">
                                 <div>
                                     <img src="/assest/OLIVE/recordgold.png" alt="" srcset="">
                                     <h6>Record a video</h6>
@@ -88,6 +88,7 @@
                 <h6 class="content_header audition">projectfame</h6>
             </div>
         </div> -->
+
 
         </section>
     </div>
