--- a/views/bbn.ejs
+++ b/views/bbn.ejs
@@ -63,6 +63,11 @@
                             </div>
                         </form>
                     </div>
+                    <div style="width:100%;height:0px;position:relative;padding-bottom:56.25%;"><iframe
+                            src="https://embed.streamyard.com/re44ht2xjmpf" width="100%" height="100%" frameborder="0"
+                            allowfullscreen
+                            style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe>
+                    </div>
                     <div class="updateprofile">
                         <h6 class="content_header">Update Your Profile</h6>
                         <p>Kindly update your profile </p>
