--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -11,6 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/css/intlTelInput.min.css" />
+    <!-- JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.min.js"></script>
 </head>
 
 <body>
@@ -88,11 +94,12 @@
                     <hr>
                     <form id="form" class="numberform">
                         <div class="flex-form">
-                            <select>
+                            <!-- <select>
                                 <option class="ng"></option>
-                            </select>
+
+                            </select> -->
                             <!-- <input type="text" name="code" id="code" readonly value="+234"> -->
-                            <input type="number" name="phone" id="phoneNumber" autocomplete="off">
+                            <input type="text" id="phone" />
                         </div>
                         <hr>
                         <button class="btn">SIGN IN</button>
@@ -210,6 +217,18 @@
         });
     </script>
     <script src="/js/app.js"></script>
+    <script>
+        var input = document.querySelector("#phone");
+        intlTelInput(input, {
+            initialCountry: "auto",
+            geoIpLookup: function (success, failure) {
+                $.get("https://ipinfo.io", function () { }, "jsonp").always(function (resp) {
+                    var countryCode = (resp && resp.country) ? resp.country : "ng";
+                    success(countryCode);
+                });
+            },
+        });
+    </script>
 
 </body>
 
