--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -53,6 +53,9 @@ body{
 }
 input#phone {
     border: none !important;
+    font-size: 30px;
+    outline: none !important;
+    background: none !important;
 }
 header{
     min-height: 64px;
@@ -231,6 +234,7 @@ header{
     align-items: center;
     gap: 10px; */
     line-height: 2;
+    padding: 10px;
     
 
 }
