--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -99,7 +99,14 @@
 
                             </select> -->
                             <!-- <input type="text" name="code" id="code" readonly value="+234"> -->
-                            <input type="text" id="phone" />
+                            <label id="forphone" for="phone">
+                                <div style="display: flex; align-items: center;">
+                                    <img src="/assest/OLIVE/emojione_flag-for-nigeria.png" alt="" srcset="">
+                                    <img src="/assest/OLIVE/arrowdown.png" />
+                                </div>
+                            </label>
+                            <input type="number" name="" id="" class="input" placeholder="0815 243 5263">
+
                         </div>
                         <hr>
                         <button class="btn">SIGN IN</button>
