--- a/views/bbn.ejs
+++ b/views/bbn.ejs
@@ -80,7 +80,8 @@
         <div id="forlivevideo"
             style="min-height: 730px; display: flex; flex-direction: column; transform: translateY(730px);transition: transform .5s ease .5s;  align-items: center; gap: 10px; padding: .55em; background-color: black;">
             <h4 class="content_header">Big Brother Naija 2022</h4>
-            <iframe height="730px" allow="camera; microphone;" width="100%" src="" frameborder="0" name="restream">
+            <iframe allowfullscreen height="730px" allow="camera; microphone;" width="100%" src="" frameborder="0"
+                name="restream">
             </iframe>
         </div>
     </div>
