--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,7 +38,7 @@
             <a href="/digitalauditionplatform">
                 <div class="box">
                     <img src="/assest/OLIVE/Group-1.png">
-                    <h5>Profile</h5>
+                    <h5>Market Place</h5>
                 </div>
             </a>
             <a href="/digitalauditionplatform">
